--- a/less/stacklist.less
+++ b/less/stacklist.less
@@ -7,12 +7,12 @@
 	position: relative;
 	padding: 20px;
 	margin-bottom: @item-margin;
-	background-color: @primary-color;
-	color: @primary-color-inverted;
+	background-color: @font-color;
+	color: @font-color-inverted;
 
-    &.show {
-        position: static !important;
-    }
+	&.show {
+		position: static !important;
+	}
 }
 
 .stacklist-button {
